--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,12 @@
 .section .heading{ margin-bottom: 60px; }
 
 .section .heading:before{ content:''; height: 10px; width: 50px; border-radius: 5px;
-	margin-bottom: 20px; display: block; background: #FFA804; }
+	margin-bottom: 20px; display: block; background: #0bbf68; }
 
 .margin-t-10{ margin-top: 10px; }
 
 
-.font-yellow{ color: #FFA600; }
+.font-yellow{ color: #0bbf68; }
 
 .font-semi-white{ color: #ddd; }
 
@@ -70,9 +70,9 @@ b.max-bold{ font-weight: 700; }
 /* Intro */
 
 
-.btn-border-purple{ border: 1px solid #28023D; color: #222; }
+.btn-border-purple{ border: 1px solid #0bbf68; color: #222; }
 
-.btn-border-purple:hover{ background: #28023D; color: #fff; }
+.btn-border-purple:hover{ background: #2d9f79; color: #fff; }
 
 .intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0;
 	right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu3.jpg");
@@ -89,7 +89,7 @@ background-size: cover;}
 .intro .information > li{ display: block; margin: 5px 0; }
 
 .intro .social-icons > li > a{ height: 35px; line-height: 35px; width: 35px; border-radius: 20px;
-	overflow: hidden; z-index: 1; position: relative; margin: 0 5px 5px; background: #887392; color: #fff; }
+	overflow: hidden; z-index: 1; position: relative; margin: 0 5px 5px; background: #2d9f79; color: #fff; }
 
 .intro .git a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
 	top: 0; z-index: -1; border-radius: 20px; background: #000000;
@@ -241,7 +241,13 @@ background-size: cover;}
 
 /* Experience */
 
-.experience-section{ background: #28023D; color: #fff; }
+.proj {
+	background: #6441A5;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+	color: #fff;
+}
 
 .experience .list > li{ display: block; position: relative; margin-bottom: 10px; padding-left: 20px; }
 
@@ -253,9 +259,19 @@ background-size: cover;}
   background-color: #FFFFFF;
 }
 
+h4 {
+	color: #2d9f79;
+}
+
 
 /* End Experience */
 
 /* Footer */
-.copyright{ text-align: center; padding: 30px 0; background: #28023D; }
+.copyright{
+	text-align: center; padding: 30px 0;
+	background: #6441A5;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
 /* End Footer */
