new Resume format

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ a, button{ display: inline-block; text-decoration: none; color: inherit; line-he
 	.btn-border-purple:hover{ background: #2d9f79; color: #fff; }
 
 	.intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0;
-	right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu3.jpg");
+	right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu.jpg");
 	background-size: cover;}
 
 	.intro-section:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
