--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,12 @@
 .section .heading{ margin-bottom: 60px; }
 
 .section .heading:before{ content:''; height: 10px; width: 50px; border-radius: 5px;
-margin-bottom: 20px; display: block; background: #0bbf68; }
+margin-bottom: 20px; display: block; background: #aaf0d1; }
 
 .margin-t-10{ margin-top: 10px; }
 
 
-.font-yellow{ color: #0bbf68; }
+.font-yellow{ color: #81b398; }
 
 .font-semi-white{ color: #ddd; }
 
@@ -19,7 +19,7 @@ margin-bottom: 20px; display: block; background: #0bbf68; }
 html{ font-size: 100%; height: 100%; overflow-x: hidden; margin: 0px;  padding: 0px; touch-action: manipulation; }
 
 
-body{ font-size: 16px; font-family: 'Poppins', serif; width: 100%; height: 100%; margin: 0; font-weight: 400;
+body{ font-size: 16px; font-family: 'Poppins', sans-serif; width: 100%; height: 100%; margin: 0; font-weight: 400;
 -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; word-wrap: break-word;
 color: #333; }
 
@@ -66,9 +66,9 @@ a, button{ display: inline-block; text-decoration: none; color: inherit; line-he
 	/* Intro */
 
 
-	.btn-border-purple{ border: 1px solid #0bbf68; color: #222; }
+	.btn-border-purple{ border: 1px solid #aaf0d1; color: #222; }
 
-	.btn-border-purple:hover{ background: #2d9f79; color: #fff; }
+	.btn-border-purple:hover{ background: #438644; color: #fff; }
 
 	.intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0;
 	right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu.jpg");
@@ -85,7 +85,7 @@ a, button{ display: inline-block; text-decoration: none; color: inherit; line-he
 		.intro .information > li{ display: block; margin: 5px 0; }
 
 		.intro .social-icons > li > a{ height: 35px; line-height: 35px; width: 35px; border-radius: 20px;
-			overflow: hidden; z-index: 1; position: relative; margin: 0 5px 5px; background: #2d9f79; color: #fff; }
+			overflow: hidden; z-index: 1; position: relative; margin: 0 5px 5px; background: #438644; color: #fff; }
 
 			.intro .git a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
 			top: 0; z-index: -1; border-radius: 20px; background: #000000;
@@ -116,6 +116,7 @@ a, button{ display: inline-block; text-decoration: none; color: inherit; line-he
 	position: relative;
 	text-align: center;
 	cursor: default;
+	border: 8px groove #aaf0d1;
 }
 
 .hovereffect .overlay {
@@ -259,6 +260,46 @@ a, button{ display: inline-block; text-decoration: none; color: inherit; line-he
 	padding: 30px;
 }
 
+hr {
+	border: 0 solid #abedc1;
+	border-top-width: 1px;
+	height: 0;
+	margin: 60px auto;
+	clear: both;
+	display: block;
+	width: 550px;
+	position: relative;
+  }
+  hr:before {
+	content: " ";
+	width: 5px;
+	height: 5px;
+	position: absolute;
+	border-radius: 5px;
+	border: 1px solid #abedc1;
+	background-color: #6fb085;
+  }
+  hr:before {
+	left: 0;
+	bottom: -3px;
+  	box-shadow: 550px 0 0 -1px #6fb085, 550px 0 0 0#abedc1;
+  }
+  hr:after {
+	content: url(../imgs/classyGoose.png);
+	display:block;
+	position:absolute;
+	left:50%;
+	height:50px;
+	width:50px;
+	margin:-25px 0 0 -25px;
+	border-radius:50px;
+	overflow:hidden;
+	box-shadow: 0 0 0 1px #6fb085, 0 0 5px;
+  }
+  
+  hr {transform:scale(2)}
+  body {background: #438644;}
+
 /* End Projects*/
 
 /* Experience */
@@ -266,12 +307,13 @@ a, button{ display: inline-block; text-decoration: none; color: inherit; line-he
 .proj {
 	background: #6441A5;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: white; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 	color: #fff;
+	/* background: #dcdc9a; */
 }
 
-.experience .list > li{ display: block; position: relative; margin-bottom: 10px; padding-left: 20px; }
+.experience .list > li{ display: block; position: relative; margin-bottom: 10px; padding-left: 20px; margin-top:10px;}
 
 .experience .list > li:before{ content: ''; position: absolute; top: 7px; left: 0; height: 10px;
 width: 10px; display: block; border-radius: 10px; border: 2px solid #777; }
@@ -279,10 +321,11 @@ width: 10px; display: block; border-radius: 10px; border: 2px solid #777; }
 .exp {
 	color: #777;
 	background-color: #FFFFFF;
+	/* background-color: #ebe5e6; */
 }
 
 h4 {
-	color: #2d9f79;
+	color: #438644;
 }
 
 
@@ -293,7 +336,8 @@ h4 {
 	text-align: center; padding: 30px 0;
 	background: #6441A5;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #438644; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	color: white;
 
 }
 /* End Footer */
