--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,14 @@
 /* General */
 
-.section{ padding: 35px 0 35px; }
+.section-content { padding: 35px 0 35px; }
 
-.section .heading{ margin-bottom: 30px; }
+.section-content .heading{ 
+	color: #777;
+	background-color: #FFFFFF;
+	margin-bottom: 30px; 
+}
 
-.section .heading:before{ content:''; height: 10px; width: 50px; border-radius: 5px;
+.section-content .heading:before{ content:''; height: 10px; width: 50px; border-radius: 5px;
 margin-bottom: 20px; display: block; background: #aaf0d1; }
 
 .margin-t-10{ margin-top: 10px; }
@@ -22,6 +26,10 @@ html{ font-size: 100%; height: 100%; overflow-x: hidden; margin: 0px;  padding: 
 body{ font-size: 16px; font-family: 'Poppins', sans-serif; width: 100%; height: 100%; margin: 0; font-weight: 400;
 -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; word-wrap: break-word;
 color: #333; }
+
+h1, h2, h3, h4, h5, h6, p, a, ul, span, li, img, input, button{ margin: 0; padding: 0; }
+
+h1,h2,h3,h4,h5,h6{ line-height: 1.5; font-weight: inherit; }
 
 h1,h2,h3{ font-family: 'Poppins', cursive; }
 
@@ -305,10 +313,6 @@ hr {
   hr {transform:scale(2)}
   body {background: #438644;}
 
-/* End Projects*/
-
-/* Experience */
-
 .proj {
 	background: #6441A5;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
@@ -316,6 +320,15 @@ hr {
 
 	color: #fff;
 	/* background: #dcdc9a; */
+}
+
+/* End Projects*/
+
+/* Experience */
+
+
+.experience {
+	margin-bottom: 20px;
 }
 
 .experience .list > li{ display: block; position: relative; margin-bottom: 10px; padding-left: 20px; margin-top:10px;}
@@ -326,7 +339,11 @@ width: 10px; display: block; border-radius: 10px; border: 2px solid #777; }
 .exp {
 	color: #777;
 	background-color: #FFFFFF;
-	/* background-color: #ebe5e6; */
+}
+
+.exp img {
+	margin-top: -20px;
+	width: 60px;
 }
 
 h4 {
