--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ html{ font-size: 100%; height: 100%; overflow-x: hidden; margin: 0px;  padding: 
 
 body{ font-size: 16px; font-family: 'Poppins', sans-serif; width: 100%; height: 100%; margin: 0; font-weight: 400;
 -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; word-wrap: break-word;
-color: #333; }
+color: #333; background: #438644; }
 
 h1, h2, h3, h4, h5, h6, p, a, ul, span, li, img, input, button{ margin: 0; padding: 0; }
 
@@ -46,29 +46,29 @@ h6{ font-size: .9em; letter-spacing: 1px; }
 a, button{ display: inline-block; text-decoration: none; color: inherit; line-height: 1;
 	-webkit-transition: all .25s ease-in-out; transition: all .25s ease-in-out; }
 
-	a:focus, a:active, a:hover,
-	button:focus, button:active, button:hover,
-	a b.light-color:hover{ text-decoration: none; color: #FFA804; }
+a:focus, a:active, a:hover,
+button:focus, button:active, button:hover,
+a b.light-color:hover{ text-decoration: none; color: #FFA804; }
 
-	b{ font-weight: 600; }
+b{ font-weight: 600; }
 
-	img{ width: 100%; }
+img{ width: 100%; }
 
-	li{ list-style: none; display: inline-block; }
+li{ list-style: none; display: inline-block; }
 
-	span{ display: inline-block; }
+span{ display: inline-block; }
 
-	button{ outline: 0; border: 0; background: none; cursor: pointer; }
+button{ outline: 0; border: 0; background: none; cursor: pointer; }
 
-	.icon{ font-size: 1.1em; display: inline-block; line-height: inherit; }
+.icon{ font-size: 1.1em; display: inline-block; line-height: inherit; }
 
-	[class^="icon-"]:before, [class*=" icon-"]:before{ line-height: inherit; }
+[class^="icon-"]:before, [class*=" icon-"]:before{ line-height: inherit; }
 
-	b.max-bold{ font-weight: 700; }
+b.max-bold{ font-weight: 700; }
 
-	/* End General */
+/* End General */
 
-	/* Intro */
+/* Intro */
 
 
 	.btn-border-purple{ border: 1px solid #aaf0d1; color: #222; }
@@ -273,29 +273,61 @@ a, button{ display: inline-block; text-decoration: none; color: inherit; line-he
 	padding: 30px;
 }
 
+.proj {
+	background: #6441A5;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
+	background: white; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+	color: #fff;
+}
+
+.row {
+	margin-bottom: 20px;
+}
+
+/* End Projects */
+
+/* Divider */
+
+.divider {
+	display: flex;
+	margin: 60px;
+}
+
+.circle-left {
+	content: " ";
+	width: 15px;
+	height: 15px;
+	position: relative;
+	border-radius: 5px;
+	border: 1px solid #abedc1;
+	background-color: #6fb085;
+	left: 5%;
+	bottom: -10px;
+}
+
+.circle-right {
+	content: " ";
+	width: 15px;
+	height: 15px;
+	position: relative;
+	border-radius: 5px;
+	border: 1px solid #abedc1;
+	background-color: #6fb085;
+	right: 5%;
+	bottom: -10px;
+}
+
 hr {
 	border: 0 solid #abedc1;
 	border-top-width: 1px;
 	height: 0;
-	margin: 60px auto;
 	clear: both;
 	display: block;
-	width: 550px;
+	width: 45%;
 	position: relative;
-  }
-  hr:before {
-	content: " ";
-	width: 5px;
-	height: 5px;
-	position: absolute;
-	border-radius: 5px;
-	border: 1px solid #abedc1;
-	background-color: #6fb085;
-  }
-  hr:before {
-	left: 0;
-	bottom: -3px;
-  	box-shadow: 550px 0 0 -1px #6fb085, 550px 0 0 0#abedc1;
+	transform: scale(2);
+	z-index: -1;
   }
   hr:after {
 	content: url(../imgs/classyGoose.png);
@@ -309,23 +341,11 @@ hr {
 	overflow:hidden;
 	box-shadow: 0 0 0 1px #6fb085, 0 0 5px;
   }
-  
-  hr {transform:scale(2)}
-  body {background: #438644;}
 
-.proj {
-	background: #6441A5;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
-	background: white; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+/* End divider */
 
-	color: #fff;
-	/* background: #dcdc9a; */
-}
-
-/* End Projects*/
 
 /* Experience */
-
 
 .experience {
 	margin-bottom: 20px;
@@ -349,7 +369,6 @@ width: 10px; display: block; border-radius: 10px; border: 2px solid #777; }
 h4 {
 	color: #438644;
 }
-
 
 /* End Experience */
 
