--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,12 @@
 /* General */
 
-.section-content { padding: 35px 0 35px; }
+.container { 
+	padding: 25px;
+}
+
+.section-content {
+	margin-bottom: 20px;
+}
 
 .section-content .heading{ 
 	color: #777;
@@ -71,52 +77,52 @@ b.max-bold{ font-weight: 700; }
 /* Intro */
 
 
-	.btn-border-purple{ border: 1px solid #aaf0d1; color: #222; }
+.btn-border-purple{ border: 1px solid #aaf0d1; color: #222; }
 
-	.btn-border-purple:hover{ background: #438644; color: #fff; }
+.btn-border-purple:hover{ background: #438644; color: #fff; }
 
-	.intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0;
-	right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu.jpg");
-	background-size: cover;}
+.intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0;
+right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu.jpg");
+background-size: cover;}
 
-	.intro-section:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
-	height: 150px; z-index: -1; background: #fff; }
+.intro-section:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
+height: 150px; z-index: -1; background: #fff; }
 
-	.intro{ padding: 0 20px; margin-top: 100px; text-align: center; background: #fff; }
+.intro{ padding: 0 20px; margin-top: 100px; text-align: center; background: #fff; }
 
-	.intro .profile-img{ height: 200px; width: 200px; border-radius: 100px; margin: 0 auto;
-		overflow: hidden; position: relative; top: -100px; margin-bottom: -70px;  }
+.intro .profile-img{ height: 200px; width: 200px; border-radius: 100px; margin: 0 auto;
+	overflow: hidden; position: relative; top: -100px; margin-bottom: -70px;  }
 
-		.intro .information > li{ display: block; margin: 5px 0; }
+	.intro .information > li{ display: block; margin: 5px 0; }
 
-		.intro .social-icons > li > a{ height: 35px; line-height: 35px; width: 35px; border-radius: 20px;
-			overflow: hidden; z-index: 1; position: relative; margin: 0 5px 5px; background: #438644; color: #fff; }
+	.intro .social-icons > li > a{ height: 35px; line-height: 35px; width: 35px; border-radius: 20px;
+		overflow: hidden; z-index: 1; position: relative; margin: 0 5px 5px; background: #438644; color: #fff; }
 
-			.intro .git a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
-			top: 0; z-index: -1; border-radius: 20px; background: #000000;
-			-webkit-transition: all .2s ease; transition: all .2s ease;
-			-webkit-transform: scale(0); transform: scale(0); }
+		.intro .git a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
+		top: 0; z-index: -1; border-radius: 20px; background: #000000;
+		-webkit-transition: all .2s ease; transition: all .2s ease;
+		-webkit-transform: scale(0); transform: scale(0); }
 
-			.intro .linkedin a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
-			top: 0; z-index: -1; border-radius: 20px; background: #0073b1;
-			-webkit-transition: all .2s ease; transition: all .2s ease;
-			-webkit-transform: scale(0); transform: scale(0); }
+		.intro .linkedin a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
+		top: 0; z-index: -1; border-radius: 20px; background: #0073b1;
+		-webkit-transition: all .2s ease; transition: all .2s ease;
+		-webkit-transform: scale(0); transform: scale(0); }
 
-			.intro .mail a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
-			top: 0; z-index: -1; border-radius: 20px; background: #D44638;
-			-webkit-transition: all .2s ease; transition: all .2s ease;
-			-webkit-transform: scale(0); transform: scale(0); }
+		.intro .mail a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
+		top: 0; z-index: -1; border-radius: 20px; background: #D44638;
+		-webkit-transition: all .2s ease; transition: all .2s ease;
+		-webkit-transform: scale(0); transform: scale(0); }
 
 
-			.intro .social-icons > li > a:hover:after{ -webkit-transform: scale(1); transform: scale(1); }
-	
-	.intro-icon {
-		display: inline-block;
-		*display: inline; /* for older IE */
-		*zoom: 1;
-		/* height: 50%; */
-		width: 12%;
-	}
+		.intro .social-icons > li > a:hover:after{ -webkit-transform: scale(1); transform: scale(1); }
+
+.intro-icon {
+	display: inline-block;
+	*display: inline; /* for older IE */
+	*zoom: 1;
+	/* height: 50%; */
+	width: 12%;
+}
 
 /* End Intro */
 
@@ -291,7 +297,7 @@ b.max-bold{ font-weight: 700; }
 
 .divider {
 	display: flex;
-	margin: 60px;
+	margin: 50px;
 }
 
 .circle-left {
@@ -328,8 +334,8 @@ hr {
 	position: relative;
 	transform: scale(2);
 	z-index: -1;
-  }
-  hr:after {
+}
+hr:after {
 	content: url(../imgs/classyGoose.png);
 	display:block;
 	position:absolute;
@@ -340,7 +346,7 @@ hr {
 	border-radius:50px;
 	overflow:hidden;
 	box-shadow: 0 0 0 1px #6fb085, 0 0 5px;
-  }
+}
 
 /* End divider */
 
@@ -363,7 +369,7 @@ width: 10px; display: block; border-radius: 10px; border: 2px solid #777; }
 
 .exp img {
 	margin-top: -20px;
-	width: 60px;
+	width: 82px;
 }
 
 h4 {
