--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,13 @@
 }
 
 .section-content {
-	margin-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
-.section-content .heading{ 
+.heading{ 
 	color: #777;
 	background-color: #FFFFFF;
-	margin-bottom: 30px; 
 }
 
 .section-content .heading:before{ content:''; height: 10px; width: 50px; border-radius: 5px;
@@ -76,7 +76,6 @@ b.max-bold{ font-weight: 700; }
 
 /* Intro */
 
-
 .btn-border-purple{ border: 1px solid #aaf0d1; color: #222; }
 
 .btn-border-purple:hover{ background: #438644; color: #fff; }
@@ -127,6 +126,11 @@ height: 150px; z-index: -1; background: #fff; }
 /* End Intro */
 
 /* Projects */
+.proj .heading {
+	padding: 20px;
+	margin: 0 85px 30px 85px;
+}
+
 .hovereffect {
 	width: 100%;
 	height: 100%;
@@ -285,11 +289,11 @@ height: 150px; z-index: -1; background: #fff; }
 	background: white; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 	color: #fff;
-	padding-bottom: 25px;
 }
 
 .proj-row {
-	margin-bottom: 20px;
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
 
 /* End Projects */
@@ -354,13 +358,14 @@ hr:after {
 
 /* Experience */
 
-.experience {
-	margin-bottom: 20px;
+.exp-row {
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
-.experience .list > li{ display: block; position: relative; margin-bottom: 10px; padding-left: 20px; margin-top:10px;}
+.exp-row .list > li{ display: block; position: relative; margin-bottom: 10px; padding-left: 20px; margin-top:10px;}
 
-.experience .list > li:before{ content: ''; position: absolute; top: 7px; left: 0; height: 10px;
+.exp-row .list > li:before{ content: ''; position: absolute; top: 7px; left: 0; height: 10px;
 width: 10px; display: block; border-radius: 10px; border: 2px solid #777; }
 
 .exp {
@@ -375,10 +380,6 @@ width: 10px; display: block; border-radius: 10px; border: 2px solid #777; }
 
 h4 {
 	color: #438644;
-}
-
-.exp-row {
-	margin-bottom: 20px;
 }
 
 /* End Experience */
