--- a/css/styles.css
+++ b/css/styles.css
@@ -81,14 +81,14 @@ b.max-bold{ font-weight: 700; }
 .btn-border-purple:hover{ background: #438644; color: #fff; }
 
 .intro-section {
-	padding: 150px;
+	padding: 10%;
 }
 
 .intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0;
 right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu.jpg");
 background-size: cover;}
 
-.intro{ padding: 25px; text-align: center; background: #fff; }
+.intro{ padding: 25px; text-align: center; background: #fff;}
 
 .intro .profile-img{ height: 200px; width: 200px; border-radius: 100px; margin: 0 auto;
 overflow: hidden; position: relative; top: -100px; margin-bottom: -70px;  }
