--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ b.max-bold{ font-weight: 700; }
 
 .intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0;
 right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu.jpg");
-background-size: cover;}
+background-size: cover; background-position: center center;}
 
 .intro{ padding: 25px; text-align: center; background: #fff;}
 
@@ -298,6 +298,13 @@ top: 0; z-index: -1; border-radius: 20px; background: #D44638;
 .proj-row {
 	margin-top: 15px;
 	margin-bottom: 15px;
+}
+
+@media (max-width: 767px) {
+	.col-xs-12 {
+		margin-top: 5px;
+		margin-bottom: 5px;
+	}
 }
 
 /* End Projects */
