--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ b.max-bold{ font-weight: 700; }
 }
 
 .intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0;
-right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu.jpg");
+right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu-upscaled.jpeg");
 background-size: cover; background-position: center center;}
 
 .intro{ padding: 35px; text-align: center; background: #fff;}
